Revert short link, try PDF URL

--- a/page.html
+++ b/page.html
@@ -54,12 +54,12 @@
   			           Your browser does not support the audio element.
   		    </audio>
       		<br>
-      		<embed src="200 - Ohayou Sayori!.pdf" type="application/pdf" width=90% height=700px>
+      		<embed src="https://www.ninsheetmusic.org/download/pdf/3838" type="application/pdf" width=90% height=700px>
       </div>
       <div class="column">
         <h3>Original</h2>
         <br>
-        <iframe width="560" height="315" src="http://goo.gl/UWbjXV" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWuDdfe7v4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
     </div>
 		<br>
